--- a/index.html
+++ b/index.html
@@ -20,17 +20,12 @@
             </a>
         </div>
         <a href="models.html" class="links">Home</a>
-        <a href="#" class="links">About the website</a>
-        <a href="contact.html" class="links">Contact a Teacher</a>
         <a href="about.html" class="links">FAQ's</a>
-        <a href="welcome.html" class="links" style="position:relative;left:410px ;">Login</a>
+        <a href="Login.html" class="links" style="position:relative;left:710px ;">Login</a>
 
         <div class="login">
-            <a href="welcome.html" class="links"><img class="login" src="Images/user.png" alt=""></a>
-
-
+            <a href="Login.html" class="links"><img class="login" src="Images/user.png" alt=""></a>
         </div>
-
 
     </div>
     <!-- Navbar -->
@@ -43,8 +38,17 @@
         </div>
     </div>
 
+    <!-- <div class="careers">
+        <img src="https://www.audi-saudiarabia.com/content/dam/nemo/me/new-about/careers.jpg?imwidth=957" height="500"
+            width="800">
+        <h2 style="padding: 30px 0px 0px 850px; font-size:30px">Careers.</h2>
+        <p style="padding: 0px 0px 0px 850px;">We are currently looking for new <br>colleagues who would like to work on
+            <br>challenging tasks in a small team with a <br>flat hierarchy for the following positions.
+        </p>
+        <button style="margin: 200px 0px 0px 50px">Find out more</button>
+    </div> -->
 
-    <div class="avs">
+    <!-- <div class="avs">
         <div>
             <img src="Images/A86_883.jpg" alt="">
         </div>
@@ -53,9 +57,9 @@
             <button>Explore More</button>
         </div>
     </div>
-
+ -->
     <!-- <section> -->
-    <div class="bg-image" style="background-image: url('Images/E-tronHub-3840X4000.jpg');">
+    <!-- <div class="bg-image" style="background-image: url('Images/E-tronHub-3840X4000.jpg');">
         <div class=" card">
             <div>
                 <h1 style="font-size: 2.5rem;">The home of electric</h1>
@@ -73,10 +77,10 @@
                 <button id="b2">#FutureIsAnAttitude</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
-    <div class="ar">
+    <!-- <div class="ar">
         <div>
             <img src="Images/116_E-Tron_AR-Banner_570X857.jpg" alt="">
         </div>
@@ -144,7 +148,7 @@
                 cities in India</h2>
             <a href="#">2022-09-09 ></a>
         </div>
-    </div>
+    </div> -->
 
     <div class="footer" style="top: 5900px;">
         <text style="position:relative; left:1180px ; color:white;">
