--- a/Login.html
+++ b/Login.html
@@ -28,7 +28,7 @@
             if (msg != "Enter valid Email id!") {
                 alert("Login Successful");
             }
-            window.open("index.html")
+            window.open("teacherDash.html")
         }
     </script>
 </head>
